2008-07-07  Jeremy Cribb <jcribb@email.unc.edu>
	* .cvsignore: added. this folder now ignores .asv and .mat files
	* plot_cap_creep.m: added.  generates standard cone-and-plate (CAP) creep figure.
	* plot_cap_flow.m: added. generates standard CAP flow figure.
	* plot_cap_fsweep.m: added. generates standard CAP frequency sweep figure.
	* plot_cap_nsweep.m: added. generates standard CAP strain sweep figure.
	* plot_cap_ssweep.m: added. generates standard CAP stress sweep figure.
	* taplot.m: added.  uses ta2mat and plotting functions to generate our standard set of canonical rheology plots.
	* ta2mat.m: fixed bug where matrix containing final tabulated data gets overwritten with zeros.
	
2008-05-16  Jeremy Cribb <jcribb@email.unc.edu>
	* ta2mat.m: parses text file generated by TA Instruments Area Rheometer and puts into a matlab structure.
	* ta2mat.notes.m: design notes about ta2mat.

2005-09-13  Jeremy Cribb <jcribb@email.unc.edu>
	* cap_plot.m: corrected documentation.

2005-06-09  Jeremy Cribb <jcribb@email.unc.edu>
	* cap_creep.m,cap_sweep.m,cap_viscometry,cap_yield.m: removed unnecessary commented code.  cleaned up a bit.
	* cap_plot: added creep:all cone-and-plate plotting type.
	
2005-05-09  Jeremy Cribb <jcribb@email.unc.edu>
	* Added cap_creep.m, cap_sweep.m, cap_viscometry.m, cap_yield.m.  These files take the exported XLS files from the Bohlin Gemini Rheometer and converts them to matlab structures/workspaces.
	* Added cap_plot.m.  Plots standard rheology plots from data.  Uses above as input filters.

2005-03-31  Jeremy Cribb <jcribb@email.unc.edu>

	* Initial Version


