@@ -12,7 +12,6 @@ if nargin < 2
     error('No data specified.');
 end
 
-h = figure; 
 set(h, 'Name', 'creep');
 plot(t, J, 'o-','Color',[0.502 0.502 0.502]);
 xlabel('time, t [s]');
