@@ -288,7 +288,7 @@ function out_struct = extract_parameter_value_pair(outl, startp, endp)
     return;
 
     
-%% Prints out a log message complete with timestamp.
+% Prints out a log message complete with timestamp.
 function logentry(txt)
     logtime = clock;
     logtimetext = [ '(' num2str(logtime(1),  '%04i') '.' ...
